--- a/VatanSmsService.Nuget/VatanSmsService.Nuget/VatanSmsService.Nuget.csproj
+++ b/VatanSmsService.Nuget/VatanSmsService.Nuget/VatanSmsService.Nuget.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="RestSharp" Version="110.2.0" />
+  </ItemGroup>
+
 </Project>
