--- a/VatanSmsService.Nuget/VatanSmsService.Nuget/VatanSmsService.Nuget.csproj
+++ b/VatanSmsService.Nuget/VatanSmsService.Nuget/VatanSmsService.Nuget.csproj
@@ -1,10 +1,42 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageId>VatanSmsService.Nuget</PackageId>
+    <Title>VatanSmsService</Title>
+    <Version>1.0.0</Version>
+    <Authors>berjcode</Authors>
+    <Company>berjcode</Company>
+    <Product>VatanSmsService</Product>
+    <Description>This package provides ready-made methods for those using the vatansms API. Codes for similar APIs can be reviewed and edited</Description>
+    <Copyright>berjcode</Copyright>
+    <PackageProjectUrl>https://github.com/berjcode/VatanSmsService</PackageProjectUrl>
+    <PackageIcon>Logo.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/berjcode/VatanSmsService</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>sms, service, smsservice, vatansms</PackageTags>
+    <PackageReleaseNotes>First Version</PackageReleaseNotes>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\docs\Image\Logo.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
